mule-user-guide/v/3.3/udp-transport-reference.adoc
= UDP Transport Reference

http://en.wikipedia.org/wiki/User_Datagram_Protocol[Universal Datagram Protocol], or UDP, is a stateless protocol for sending or receiving large numbers of messages (datagrams) quickly. The UDP transport in Mule allow sending messages to or receiving messages with Mule using UDP sockets.

== Transport Info

[width="100%",cols="10%,9%,9%,9%,9%,9%,9%,9%,9%,9%,9%",options="header",]
|===
a|
Transport

 a|
Doc

 a|
Inbound

 a|
Outbound

 a|
Request

 a|
Transactions

 a|
Streaming

 a|
Retries

 a|
MEPs

 a|
Default MEP

 a|
Maven Artifact

|UDP |http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/udp/package-summary.html[JavaDoc] http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_udp/namespace-overview.html[SchemaDoc] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[image] |image:http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[image] |one-way, request-response |request-response |org.mule.transport:mule-transport-udp

|===

== Namespace and Syntax

XML namespace:

[source, xml]
----
xmlns:udp="http://www.mulesoft.org/schema/mule/udp"
----

XML Schema location:

[source]
----
http://www.mulesoft.org/schema/mule/udp  http://www.mulesoft.org/schema/mule/udp/3.3/mule-udp.xsd
----

Connector syntax:

[source, xml]
----
<udp:connector name="udpConnector" receiveBufferSize="1024" sendBufferSize="1024"
               timeout="0" keepSendSocketOpen="false" broadcast="false"/>
----

Endpoint syntax:

You can define your endpoints 2 different ways:

. Prefixed endpoint:
+
[source, xml]
----
<udp:inbound-endpoint host="localhost" port="65433"/>
----

. Non-prefixed URI:
+
[source, xml]
----
<inbound-endpoint address="udp://localhost:65433"/>
----

See the sections below for more information.

== Considerations

UDP is one of the standard communication protocols used on the Internet, and supports communication both across the internet and within a local area network. The Mule UDP module uses native Java socket support, adding no communication overhead to the classes in java.net, while allowing many of the advanced features of UDP programming to be specified in the Mule configuration rather than coded in Java.

Use this transport when communicating using low-level UDP datagrams. UDP is designed to maximize speed and scale over reliability, ordering or data integrity. UDP datagrams are not guaranteed to arrive with any particular speed, or at all, and they may arrive in a different order than they are sent in. If any of these guarantees are important to your application, use a different transport, such as link:/docs/display/33X/TCP+Transport+Reference[TCP].

Note, UDP provides no error checking, so you may want to perform additional validation or error handling in your application, if it is important.

As shown in the examples below, the UDP transport can be used to

* Send messages to a UDP socket
* Read messages from a UDP socket

== Features

The UDP module allows a Mule application both to send and receive UDP datagrams, and to declaratively customize the following features of UDP (with the standard name for each feature, where applicable):

* The timeout for sending or receiving messages (SO_TIMEOUT).
* Whether to allow sending broadcast messages (SO_BROADCAST).
* Whether to close a socket after sending a message.
* The maximum size of messages that can be received.

UDP endpoints can be used in one of two ways:

* To receive a UDP datagram, create an inbound UDP endpoint.
* To send a UDP datagram, create an outbound UDP endpoint.

== Usage

To use UDP endpoints

. Add the MULE UDP namespace to your configuration:
* Define the udp prefix using xmlns:udp="http://www.mulesoft.org/schema/mule/udp"
* Define the schema location with http://www.mulesoft.org/schema/mule/udp http://www.mulesoft.org/schema/mule/udp/3.3/mule-udp.xsd
. Define one or more connectors for UDP endpoints.
* Create a UDP connector:
+
[source, xml]
----
<udp:connector name="udpConnector"/>
----

. Create UDP endpoints.
* Datagrams will be received on inbound endpoints. The bytes in the datagram will become the message payload.
* Datagrams will be sent to outbound endpoints. The bytes in the message payload will become the datagram.
* Both kinds of endpoints are identified by a host name and a port.

NOTE: UDP endpoints are always one-way.

== Example Configurations

*Copy datagrams from one port to another*

[source, xml]
----
<udp:connector name="connector"/> ❶
 
<flow name="copy">
    <udp:inbound-endpoint host="localhost" port="4444" exchange-pattern="one-way"/> ❷
    <udp:outbound-endpoint host="remote" port="5555" exchange-pattern="one-way" /> ❸
</flow>
----

The connector at ❶ uses all default properties. The inbound endpoint at ❷ receives datagrams and copies them to the outbound endpoint at ❸.

== Configuration Options

UDP Connector Attributes

[width="100%",cols="34%,33%,33%",options="header",]
|===
|Name |Description |Default
|broadcast |set this to true to allow sending to broadcast ports |false
|keepSendSocketOpen |Whether to keep the the socket open after sending a message |false
|receiveBufferSize |This is the size of the largest (in bytes) datagram that can be received. |16 Kbytes
|sendBufferSize |The size of the network send buffer |16 Kbytes
|timeout |the timeout used for both sending and receiving |system default
|===

== Configuration Reference

=== Element Listing

= UDP Transport

The UDP transport enables events to be sent and received as Datagram packets.

== Connector

=== Attributes of <connector...>

[width="100%",cols="20%,20%,20%,20%,20%",options="header",]
|===
|Name |Type |Required |Default |Description
|receiveBufferSize |integer |no |  |The size of the receiving buffer for the socket.
|timeout |long |no |  |The amount of time after which a Send or Receive call will time out.
|sendBufferSize |integer |no |  |The size of the sending buffer for the socket.
|broadcast |boolean |no |  |Whether to enable the socket to send broadcast data.
|keepSendSocketOpen |boolean |no |  |Whether to keep the Sending socket open.
|===

=== Child Elements of <connector...>

[width="100%",cols="34%,33%,33%",options="header",]
|===
|Name |Cardinality |Description
|===

== Inbound endpoint

=== Attributes of <inbound-endpoint...>

[width="100%",cols="20%,20%,20%,20%,20%",options="header",]
|===
|Name |Type |Required |Default |Description
|host |string |no | |
|port |port number  |no | |
|===

=== Child Elements of <inbound-endpoint...>

[width="100%",cols="34%,33%,33%",options="header",]
|===
|Name |Cardinality |Description
|===

== Outbound endpoint

=== Attributes of <outbound-endpoint...>

[width="100%",cols="20%,20%,20%,20%,20%",options="header",]
|===
|Name |Type |Required |Default |Description
|host |string |no | |
|port |port number  |no | |
|===

=== Child Elements of <outbound-endpoint...>

[width="100%",cols="34%,33%,33%",options="header",]
|===
|Name |Cardinality |Description
|===

== Endpoint

=== Attributes of <endpoint...>

[width="100%",cols="20%,20%,20%,20%,20%",options="header",]
|===
|Name |Type |Required |Default |Description
|host |string |no | |
|port |port number  |no | |
|===

=== Child Elements of <endpoint...>

[width="100%",cols="34%,33%,33%",options="header",]
|===
|Name |Cardinality |Description
|===

== Schema

Namespace "http://www.mulesoft.org/schema/mule/udp"

Targeting Schemas (1):

** link:../../schemas/mule-udp_xsd/schema-overview.html[mule-upd.xsd]

Targeting Components:

** 4 link:#a1[global elements], 4 link:#a2[complexTypes], 1 link:#a3[attribute group]

=== Schema Summary

link:/docs/schemas/mule-udp_xsd/schema-overview.html[mule-udp.xsd]

[width="100%",cols="50%,50%",]
|===
2.+|The VM transport is used for intra-VM communication between components managed by Mule.
a|
Target Namespace:
a|http://www.mulesoft.org/schema/mule/udp
a|Defined Components:
a|4 link:#a1[global elements], 4 link:#a2[complexTypes], 1 link:#a3[attribute group]
a|Default Namespace-Qualified Form:
a|Local Elements: qualified; Local Attributes: unqualified
a|Schema Location:
a|http://www.mulesoft.org/schema/mule/vm/3.3/mule-udp.xsd; see link:../../schemas/mule-udp_xsd/elements/connector.html#xml_source[XML source]
a|Imports Schemas (3):
a|link:../../schemas/mule-schemadoc_xsd/schema-overview.html[mule-schemadoc.xsd], link:../../schemas/mule_xsd/schema-overview.html[mule.xsd], link:../../schemas/xml_xsd/schema-overview.html[xml.xsd]
a|Imported by Schema (2): a|_mule-all-included.xsd, link:/docs/schemas/mule-multicast_xsd/schema-overview.html[mule-multicast.xsd]
|===

=== All Element Summary

link:../../schemas/mule-udp_xsd/elements/connector.html[connector]

[width="100%",cols="50%,50%",]
|===
a|
Type:
a|
link:../../schemas/mule-udp_xsd/complexTypes/udpConnectorType.html[udpConnectorType]

a|
Content:
a|
complex, 9 attributes, attr. link:../../schemas/mule_xsd/complexTypes/annotatedType.html#a5[wildcard], 6 elements

a|
Subst.Gr:

 a|
may substitute for element link:../../schemas/mule_xsd/elements/abstract-connector.html[mule:abstract-connector]

a|
Defined:

 a|
globally in link:../../schemas/mule-udp_xsd/schema-overview.html[mule-udp.xsd]; see link:../../schemas/mule-udp_xsd/elements/connector.html#xml_source[XML source]

a|
Used:

 a|
never

|===

link:../../schemas/mule-udp_xsd/elements/endpoint.html[endpoint]

[width="100%",cols="50%,50%",]
|===
a|
Type:

 a|
link:../../schemas/mule-udp_xsd/complexTypes/globalEndpointType.html[globalEndpointType]

a|
Content:

 a|
complex, 13 attributes, attr. link:../../schemas/mule_xsd/complexTypes/annotatedType.html#a5[wildcard], 16 elements

a|
Subst.Gr:

 a|
may substitute for element link:../../schemas/mule_xsd/elements/abstract-global-endpoint.html[mule:abstract-global-endpoint]

a|
Defined:

 a|
globally in link:../../schemas/mule-udp_xsd/schema-overview.html[mule-udp.xsd]; see link:../../schemas/mule-udp_xsd/elements/endpoint.html#xml_source[XML source]

a|
Used:

 a|
never

|===

link:../../schemas/mule-udp_xsd/elements/inbound-endpoint.html[inbound-endpoint]

[width="100%",cols="50%,50%",]
|===
a|
Type:

 a|
link:../../schemas/mule-udp_xsd/complexTypes/inboundEndpointType.html[inboundEndpointType]

a|
Content:

 a|
complex, 13 attributes, attr. link:../../schemas/mule_xsd/complexTypes/annotatedType.html#a5[wildcard], 16 elements

a|
Subst.Gr:

 a|
may substitute for element link:../../schemas/mule_xsd/elements/abstract-inbound-endpoint.html[mule:abstract-inbound-endpoint]

a|
Defined:

 a|
globally in link:../../schemas/mule-udp_xsd/schema-overview.html[mule-udp.xsd]; see link:../../schemas/mule-udp_xsd/elements/inbound-endpoint.html#xml_source[XML source]

a|
Used:

 a|
never

|===

link:../../schemas/mule-udp_xsd/elements/outbound-endpoint.html[outbound-endpoint]

[width="100%",cols="50%,50%",]
|===
a|
Type:

 a|
link:../../schemas/mule-udp_xsd/complexTypes/outboundEndpointType.html[outboundEndpointType]

a|
Content:

 a|
complex, 13 attributes, attr. link:../../schemas/mule_xsd/complexTypes/annotatedType.html#a5[wildcard], 16 elements

a|
Subst.Gr:

 a|
may substitute for element link:../../schemas/mule_xsd/elements/abstract-outbound-endpoint.html[mule:abstract-outbound-endpoint]

a|
Defined:

 a|
globally in link:../../schemas/mule-udp_xsd/schema-overview.html[mule-udp.xsd]; see link:../../schemas/mule-udp_xsd/elements/outbound-endpoint.html#xml_source[XML source]

a|
Used:

 a|
never

|===

=== Complex Type Summary

link:../../schemas/mule-udp_xsd/complexTypes/globalEndpointType.html[globalEndpointType]

[width="100%",cols="50%,50%",]
|===
a|
Content:

 a|
complex, 13 attributes, attr. link:../../schemas/mule_xsd/complexTypes/annotatedType.html#a5[wildcard], 16 elements

a|
Defined:

 a|
globally in link:../../schemas/mule-udp_xsd/schema-overview.html[mule-udp.xsd]; see link:../../schemas/mule-udp_xsd/complexTypes/globalEndpointType.html#xml_source[XML source]

a|
Used:

 a|
at 1 link:../../schemas/mule-udp_xsd/complexTypes/globalEndpointType.html#a3[location]

|===

link:../../schemas/mule-udp_xsd/complexTypes/inboundEndpointType.html[inboundEndpointType]

[width="100%",cols="50%,50%",]
|===
a|
Content:

 a|
complex, 13 attributes, attr. link:../../schemas/mule_xsd/complexTypes/annotatedType.html#a5[wildcard], 16 elements

a|
Defined:

 a|
globally in link:../../schemas/mule-udp_xsd/schema-overview.html[mule-udp.xsd]; see link:../../schemas/mule-udp_xsd/complexTypes/inboundEndpointType.html#xml_source[XML source]

a|
Used:

 a|
at 1 link:../../schemas/mule-udp_xsd/complexTypes/inboundEndpointType.html#a3[location]

|===

link:../../schemas/mule-udp_xsd/complexTypes/outboundEndpointType.html[outboundEndpointType]

[width="100%",cols="50%,50%",]
|===
a|
Content:

 a|
complex, 13 attributes, attr. link:../../schemas/mule_udp/complexTypes/annotatedType.html#a5[wildcard], 16 elements

a|
Defined:

 a|
globally in link:../../schemas/mule-udp_xsd/schema-overview.html[mule-udp.xsd]; see link:../../schemas/mule-udp_xsd/complexTypes/outboundEndpointType.html#xml_source[XML source]

a|
Used:

 a|
at 1 link:../../schemas/mule-udp_xsd/complexTypes/outboundEndpointType.html#a3[location]

|===

link:../../schemas/mule-udp_xsd/complexTypes/udpConnectorType.html[udpConnectorType]

[width="100%",cols="50%,50%",]
|===
a|
Content:

 a|
complex, 9 link:../../schemas/mule-udp_xsd/complexTypes/vmConnectorType.html#a7[attributes], attr. link:../../schemas/mule_xsd/complexTypes/annotatedType.html#a5[wildcard], 6 link:../../schemas/mule-udp_xsd/complexTypes/vmConnectorType.html#a10[elements]

a|
Defined:

 a|
globally in link:../../schemas/mule-udp_xsd/schema-overview.html[mule-udp.xsd]; see link:../../schemas/mule-udp_xsd/complexTypes/vmConnectorType.html#xml_source[XML source]

a|
Includes:

 a|
definitions of 5 link:../../schemas/mule-udp_xsd/complexTypes/vmConnectorType.html#a6[attributes]

a|
Used:

 a|
at 2 link:../../schemas/mule-udp_xsd/complexTypes/vmConnectorType.html#a3[location]

|===

=== Attribute Group Summary

link:../../schemas/mule-udp_xsd/attributeGroups/addressAttributes.html[addressAttributes]

[width="100%",cols="50%,50%",]
|===
a|
Content:

 a|
2 link:../../schemas/mule-udp_xsd/attributeGroups/addressAttributes.html#a5[attribute]

a|
Defined:

 a|
globally in link:../../schemas/mule-udp_xsd/schema-overview.html[mule-udp.xsd]; see link:../../schemas/mule-udp_xsd/attributeGroups/addressAttributes.html#xml_source[XML source]

a|
Includes:

 a|
definition of 2 link:../../schemas/mule-udp_xsd/attributeGroups/addressAttributes.html#a4[attributes]

a|
Used:

 a|
at 3 link:../../schemas/mule-udp_xsd/attributeGroups/addressAttributes.html#a2[locations]

|===

'''''

[cols="",]
|===
|XML schema documentation generated with http://www.filigris.com/products/docflex_xml/#docflex-xml-re[DocFlex/XML RE] 1.8.5 using http://www.filigris.com/products/docflex_xml/xsddoc/[DocFlex/XML XSDDoc] 2.5.0 template set. All content model diagrams generated by http://www.altova.com/xmlspy[Altova XMLSpy] via http://www.filigris.com/products/docflex_xml/integrations/xmlspy/[DocFlex/XML XMLSpy Integration].
|===

== Javadoc API Reference

The Javadoc for this module can be found here:

http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transport/udp/package-summary.html[UDP]

== Maven

The UDP Module can be included with the following dependency:

[source, xml]
----
<dependency>
  <groupId>org.mule.transports</groupId>
  <artifactId>mule-transport-udp</artifactId>
  <version>3.3.0</version>
</dependency>
----

== Notes

Before Mule 3.1.1, there were two different attributes for setting timeout on UDP connectors, `sendTimeout` and `receiveTimeout`. It was necessary to set them to the same value.
